--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-flex-wrap: wrap;
+
   margin-bottom: 5rem;
 }
 .nav-links {
@@ -38,7 +38,7 @@ flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   gap: 4rem;
-  flex-wrap: wrap;
+ 
 }
 .nav-links ul {
   display: flex;
@@ -52,6 +52,68 @@ flex-wrap: wrap;
   padding: 1.2rem;
   border-radius: 1rem;
 }
+
+/* Hamburger button styles */
+.hamburger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 0.5rem;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .hamburger span {
+    width: 2.5rem;
+    height: 0.4rem;
+    background-color: var(--third-color);
+    border-radius: 10px;
+  }
+  
+  /* Responsive styles for smaller screens */
+  @media (max-width: 890px) {
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      
+    }
+    .btn-request{
+        display: none;
+    }
+  
+    .nav-links.active {
+      display: flex;
+      position: absolute;
+      top: 5.4rem;
+      right: 0;
+      
+      flex-direction: column;
+      height: 100vh;
+      width: 100%;
+      
+    }
+    .nav-links.active ul{
+        padding-top: 1rem;
+        flex-direction: column;
+        align-items: inherit;
+     
+    }
+    .nav-links.active ul li{
+      
+        padding: 2rem 3rem;
+    }
+
+    .hamburger {
+      display: flex;
+    }
+  }
+  
+
+
+
+
+
 header {
   display: flex;
   justify-content: center;
@@ -86,7 +148,7 @@ header img {
   padding: 1.6rem;
   border-radius: 1rem;
   border: none;
-  width: 25rem;
+  width: fit-content;
 }
 #brands {
     margin-top: 3rem;
@@ -106,7 +168,7 @@ header img {
   border-radius: 0.5rem;
 }
 .services-title p {
-  font-size: 4rem;
+  font-size: 2.8rem;
   font-weight: 500;
 }
 .boxes {
@@ -227,7 +289,7 @@ header img {
   background-color: var(--third-color);
   display: flex;
   border-radius: 4rem;
-  padding: 5rem;
+  padding: 3rem;
  
 }
 .paragraph-container {
@@ -242,7 +304,7 @@ header img {
   font-size: 1.8rem;
   font-weight: 400;
   color: white;
-  padding: 3rem;
+  padding:2rem 3rem 0.5rem 3rem
 }
 .learn {
   display: flex;
@@ -282,10 +344,8 @@ header img {
   width: 95%;
 }
 
-.main-card {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.close-open {
+font-size: 5rem;
 }
 .card-number {
   font-size: 6rem;
@@ -306,25 +366,25 @@ header img {
   font-weight: 400;
 }
 .main-card {
-  position: relative;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.plus-mines{
+    font-size: 6rem;
+    border: 0.1rem solid #272727;
+    border-radius: 50%;
+    padding-left: 1.4rem;
+    padding-right: 1.4rem;
 }
 
-.close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.open {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 .hide-show {
-  display: none; /*display block if i want to show paragraph*/
-}
+    display: none; 
+  }
+  .card.active {
+    background-color:var(--primary-color) 
+  }
+
 
 .team-container {
   margin-top: 5rem;
@@ -485,6 +545,9 @@ textarea {
 }
 
 
+
+
+
 button {
     background-color: var(--third-color);
     color: white;
@@ -494,6 +557,7 @@ button {
     cursor: pointer;
     font-size: 1.6rem;
     height: 5rem;
+    margin-bottom: 1rem;
 }
 
 
@@ -505,13 +569,14 @@ footer{
     padding: 1rem;
     border-radius: 5rem 5rem 0 0;
     padding: 5rem;
+    margin-top: 3rem;
 }
 .mini-nav{
     
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+   
 }
 .nav-elements{
     
@@ -519,7 +584,7 @@ footer{
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    flex-wrap: wrap;
+    
    
 }
 .nav-elements a{
@@ -531,6 +596,14 @@ footer{
     justify-content: center;
     gap: 1rem;
 }
+
+  
+
+
+
+
+
+
 
 .f-part-2{
     display: flex;
@@ -619,6 +692,12 @@ color: white;
     
 }
 
+@media (max-width: 930px){
+    .nav-links{
+        gap :1rem;
+    }
+}
+
 @media (max-width: 914px){
     .contact-form img{
        display: none;
@@ -638,7 +717,6 @@ color: white;
         gap: 2rem;
         
     }
-
 }
 @media (max-width: 864px){
   header img{
@@ -692,6 +770,11 @@ color: white;
       justify-content: center;
     }
 
+    @media (max-width: 900px){
+}
+.nav-elements {
+
+    flex-direction: column;
 }
 
-
+}
